[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valorantClientAPI"
version = "0.0.8"
authors = [
    { name="Jet612", email="jetflyer1130@gmail.com" },
]
description = "Asynchronous Python wrapper for the non-local VALORANT Client API"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jet612/VALORANT-Async-Client-API"